--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "tourmaline-core-test",
-  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "devmule",
-  "license": "ISC"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode=development",
+    "build": "webpack --mode=production",
+    "serve": "webpack serve"
+  },
+  "devDependencies": {
+    "ts-loader": "^7.0.5",
+    "ts-node": "^10.8.1",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1",
+    "typescript": "^4.7.3"
+  }
 }
