--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,12 @@ jobs:
       - run: |
           npm install
       - run: |
-          npm run all
+          npm run build
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
-        with:
-          milliseconds: 1000
+      - run: |
+          npm install
+      - run: |
+          npm run test
