--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "types": ["jest", "node"],
+    "types": ["chai", "mocha", "node"],
     "lib": ["ES6", "DOM"],
     "outDir": "./dist/"
   },
